<resources>
	<string name="about_translators">translator-credits</string>
	<string name="about_comments">OI Shopping list lets you keep track of your shopping items. You can also use it for other kinds of check lists, for example for ToDo lists or party guest lists.</string>
	<string name="about_website_label">OI Shopping list at OpenIntents</string>
	<string name="app_name">OI Shopping list</string>
	<string name="new_item">New item</string>
	<string name="new_list">New list</string>
	<string name="send">Send list</string>
	<string name="empty_list_not_sent">Empty list not sent.</string>
	<string name="email_not_available">No application available for sending.</string>
	<string name="my_shopping_list">My shopping list</string>
	<string name="new_list_hint">i.e. wishlist, family list</string>
	<string name="clean_up_list">Clean up list</string>
	<string name="delete_list">Delete list</string>
	<string name="ask_new_list">Enter name of new shopping list</string>
	<string name="ask_rename_list">Rename shopping list</string>
	<string name="ask_edit_item">Edit item</string>
	<string name="please_enter_name">Please enter a name</string>
	<string name="no_items_marked">No items are marked as crossed out.</string>
	<string name="confirm_delete_list">Do you really want to delete this shopping list?</string>
	<string name="no_shopping_provider">Error while accessing shopping lists.</string>
	<string name="pick_item">Pick an item</string>
	<string name="pick_list">Pick a list</string>
	<string name="theme">Theme</string>
	<string name="theme_settings">Theme settings</string>
	<string name="rename_list">Rename list</string>
	<string name="menu_mark_item">Mark item</string>
	<string name="menu_edit_item">Edit item</string>
	<string name="menu_auto_add">Auto add</string>
	<string name="no_items_available">No items available</string>
	<string name="menu_remove_item">Remove item from list</string>
	<string name="menu_delete_item">Delete item permanently</string>
	<string name="add">Add</string>
	<string name="menu_pick_items">Pick items</string>
	<string name="menu_start_shopping">Shopping</string>
	<string name="pick_items_titel">%s - Pick items</string>
	<string name="shopping_title">%s - Shopping</string>
	<string name="tags">Tags</string>
	<string name="price">Price</string>
	<string name="item">Item</string>
	<string name="quantity">Quantity</string>
	<string name="total">Total: %s</string>
	<string name="total_checked">Checked: %s</string>
	<string name="delete_item_confirm">Are you sure you want to permanently delete this item, its tags, and its price from all shopping lists?</string>
	<string name="delete">Delete</string>
	<string name="suffix_checked">... OK</string>
	<string name="empty"></string>
	<string name="pick_list_for_shortcut">Pick list for shortcut</string>
	<string name="pick_list_to_insert_items">Pick list to insert items</string>
	<string name="theme_pick">Pick a theme</string>
	<string name="theme_description">Choose a theme for this list</string>
	<string name="theme_default">Default</string>
	<string name="theme_classic">Classic</string>
	<string name="theme_bugdroid">Android</string>
	<string name="theme_classic_export">Classic (from OI Shopping List)</string>
	<string name="theme_bugdroid_export">Android (from OI Shopping List)</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="use_theme_for_all_lists">Use this theme for all lists</string>
	<string name="get_more_themes">Get more themes</string>
	<string name="preferences">Settings</string>
    <string name="preference_application">Application settings</string>
	<string name="preference_unchecked_on_top">Unchecked on top</string>
	<string name="preference_unchecked_on_top_summary">Always show unchecked items first</string>
	<string name="preference_fontsize">Font size</string>
	<string name="preference_fontsize_summary">Change font size</string>
	<string name="preference_fontsize_dialog_title">Choose font size</string>
	<string name="preference_sortorder_title">Sort order</string>
	<string name="preference_sortorder_summary">Change sort order of list items</string>
	<string name="preference_sortorder_dialog_title">Choose sort order</string>
	<string name="preference_loadlastused_title">Load last list used</string>
	<string name="preference_loadlastused_summary">Always start with the list viewed last time.</string>
	<string name="preference_capitalization_title">Capitalization</string>
	<string name="preference_capitalization_summary">Automatic capitalization of entries</string>
	<string name="preference_capitalization_dialog_title">Choose capitalization</string>
	<string name="preference_hidechecked_title">Hide checked items</string>
	<string name="preference_hidechecked_summary">Immediately hide items checked off.</string>
	<string name="preference_showprice_title">Show price</string>
	<string name="preference_showprice_summary">Shown as extra column in list.</string>
	<string name="preference_showtags_title">Show tags</string>
	<string name="preference_showtags_summary">Shown as extra column in list.</string>
	<string name="preference_showquantity_title">Show quantity</string>
	<string name="preference_showquantity_summary">Shown as extra column in list.</string>
	<string name="preference_shake_title">Shake to clean up</string>
	<string name="preference_shake_summary">Shake the phone to clean up the list.</string>
    <string name="preference_advanced">Advanced settings</string>
    <string name="preference_advanced_summary">Additional settings regarding the appearance.</string>
    <string name="preference_general">General</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_addons">Add-ons</string>
    <string name="preference_get_addons">Get new add-ons</string>
    <string name="preference_get_addons_summary">Search for extensions and themes online.</string>
    <string name="preference_get_market_addons">Get add-ons from Market</string>
    <string name="preference_get_developer_addons">Get add-ons from OpenIntents</string>
    <string name="preference_extensions">Extensions</string>
    <string name="preference_themes">Themes</string>
    <string name="preference_market_extensions_summary">Search for extensions at Android Market.</string>
    <string name="preference_market_themes_summary">Search for themes at Android Market.</string>
    <string name="preference_developer_extensions_summary">Get extensions from the OpenIntents homepage.</string>
	<string name="preference_developer_themes_summary">Get themes from the OpenIntents homepage.</string>
	<string name="eula_title">OI Shopping List EULA</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Cancel</string>
	<string name="update_box_text">Please check manually for updates or install OI Update
for automatic notifications.
Current version: %s
	</string>
	<string name="update_check_now">Check now.</string>
	<string name="update_get_updater">Get OI Updater.</string>
	<string name="update_error">Download application not available.</string>
	<string name="update">Check updates</string>
	<string name="about">About</string>
	<string name="aboutapp_not_available">Version %s\n\nNo compatible extension available to display full info (contact, credits, license).</string>
	<string name="aboutapp_get">Get OI About</string>
	<string name="oi_shopping_permission_read">read shopping lists</string>
	<string name="oi_shopping_permission_read_descr">Allows an application to read shopping lists. Note that encrypted lists and items are provided in the encrypted format.</string>
	<string name="oi_shopping_permission_write">write shopping lists</string>
	<string name="oi_shopping_permission_write_descr">Allows an application to create new lists and items or change existing ones.</string>
    <string-array name="preference_sortorder_entries">
    	
    	<item>unchecked first, alphabetical</item>
        
    	<item>alphabetical</item>
        
    	<item>newest first</item>
        
    	<item>oldest first</item>
        
    	<item>tags alphabetical</item>
        
    	<item>most expensive first</item>
        
    	<item>unchecked first, tags alphabetical</item>
    </string-array>
    <string-array name="preference_fontsize_entries">
    	
        <item>Tiny</item>
    	
        <item>Small</item>
    	
    	<item>Default</item>
    	
        <item>Large</item>
    </string-array>
    <string-array name="preference_capitalization_entries">
    	
        <item>None</item>
    	
        <item>Per Sentence</item>
    	
        <item>Per Word</item>
    </string-array>
	<string name="label_select_action">Select action:</string>
	<string name="label_select_list">Select list:</string>
    <string-array name="automation_actions">
    	
    	<item>Clean up list</item>
    </string-array>
</resources>