<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2009 OpenIntents.org
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->

<themes xmlns:oi="http://schemas.openintents.org/android/themes" >
	<attributeset oi:name="org.openintents.shoppinglist" >
		<theme oi:title="@string/theme_default"
			oi:style="@style/ShoppingList" />
		<theme oi:title="@string/theme_classic"
			oi:style="@style/ShoppingList.Classic" />
		<theme oi:title="@string/theme_bugdroid"
			oi:style="@style/ShoppingList.Android" />
	</attributeset>
</themes>